<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.moviepit.MovieDetail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="@dimen/padding_10dp"
            app:expandedTitleTextAppearance="@style/CollapsedAppBarTopic"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/nav_menu_bg"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_black"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="@dimen/progress_dimen"
                android:layout_height="@dimen/progress_dimen"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin">

                <com.moviepit.utilities.CircleProgressBar
                    android:id="@+id/custom_progressBar"
                    android:layout_width="@dimen/progress_dimen"
                    android:layout_height="@dimen/progress_dimen"
                    app:progressBarThickness="@dimen/padding_5dp"
                    app:progressbarColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/percentage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.moviepit.MovieDetail">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/padding_5dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/layout_full"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin" />

                <TextView
                    android:id="@+id/cast_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_label"
                    android:layout_below="@id/movie_overview"
                    android:textColor="@color/primaryText"
                    android:layout_marginLeft="@dimen/padding_16dp"
                    android:layout_marginRight="@dimen/padding_16dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:layout_marginBottom="@dimen/padding_5dp"
                    />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cast_label"
                    android:layout_marginLeft="@dimen/padding_16dp"
                    android:layout_marginRight="@dimen/padding_16dp"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recycler_view_horizontal"
                    android:layout_margin="@dimen/text_margin">

                    <LinearLayout
                        android:id="@+id/linear_layout_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/status_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/status_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_original_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_status"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/original_language_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/original_language_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_original_language"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/budget_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/budget_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_revenue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_budget"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/revenue_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/revenue_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_revenue"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/homepage_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/homepage_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_homepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linear_layout_genre"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/padding_5dp"
                            android:text="@string/genre_label"
                            android:textColor="@color/primaryText"
                            android:textSize="@dimen/font_16sp" />

                        <TextView
                            android:id="@+id/genre_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondaryText"
                            android:textSize="@dimen/font_15sp" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
